[package]
name = "budget_server"
version = "0.1.0"
authors = ["Nathan Lincoln <lincolnnathan205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"
async-std = { version = "1.4.0", features = ['attributes'] }
data = { path = "../data" }
env_logger = "0.7.1"
log = "0.4.8"

[dependencies.serde]
version = "1.0"
features = ['derive']

[dependencies.uuid]
version = "0.8"
features = ['serde', 'v4']
