[package]
name = "data"
version = "0.1.0"
authors = ["Nathan <lincolnnathan205@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "btree_insertion"
harness = false
